# edlin

./: AUTHORS  ChangeLog  Makefile.am  Makefile.bc  Makefile.in  config-h.bc  config.h.in  configure  configure.in  defines.c  defines.h  dynarray.h  dynstr.c  dynstr.h  edlib.c  edlib.h  edlin.c  edlin.lsm  edlin.tgt  edlin.wpj  mkinstalldirs  msgs-da.h  msgs-de.h  msgs-es.h  msgs-eu.h  msgs-fi.h  msgs-fr.h  msgs-is.h  msgs-it.h  msgs-ja.h  msgs-nl.h  msgs-no.h  msgs-pl.h  msgs-pt.h  msgs-sv.h  msgs-tr.h  msgs-zh_hans.h  ow.bat
kitten/: edlin.fi  edlin.no  edlin.pl  edlin.zh_hans
